fix: 조인 쿼리 수정